# SMB_Pinger

./: .env.example  .gitignore  pyproject.toml
deploy/: backup.sh  nginx.conf  setup.sh  smb-pinger.service
docs/: google_places_api_research.md
docs/brainstorms/: 2026-02-26-smb-pinger-brainstorm.md
docs/plans/: 2026-02-26-feat-smb-website-uptime-monitor-plan.md
src/smb_pinger/: check_cycle.py  checker.py  config.py  csv_importer.py  database.py  main.py  models.py  queries.py  scheduler.py  schemas.py  security.py  url_utils.py
src/smb_pinger/routes/: admin.py  dashboard.py
static/: app.css  app.js
templates/: admin.html  base.html  business_detail.html  dashboard.html
templates/components/: status_badge.html  uptime_bar.html
tests/: conftest.py  test_check_cycle.py  test_checker.py  test_config.py  test_csv_importer.py  test_database.py  test_queries.py  test_url_utils.py
tests/test_routes/: test_admin.py  test_dashboard.py  test_health.py
