[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "smb-pinger"
version = "0.1.0"
description = "Website uptime monitor for Santa Barbara small businesses"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn[standard]>=0.34,<1.0",
    "httpx>=0.28,<1.0",
    "aiosqlite>=0.20,<1.0",
    "apscheduler>=3.10,<4.0",
    "jinja2>=3.1,<4.0",
    "jinja2-fragments>=1.0",
    "python-multipart>=0.0.9",
    "pydantic-settings>=2.0,<3.0",
    "passlib[bcrypt]>=1.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
    "ruff>=0.9",
    "mypy>=1.14",
    "coverage>=7.0",
]

[tool.ruff]
target-version = "py311"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
